2009-01-27  Quentin Mathe <qmathe@club-internet.fr>

	* ETLayoutItemGroup:
	Moved ETContainer index path-based source protocol to ETLayoutItemGroup, in 
	that way it is centered around the base item.
	(-itemGroup:numberOfItemsAtPath:, itemGroup:itemAtPath:): Added.
	* ETContainer:
	(-numberOfItemsInContainer:, container:itemAtIndex:):
	(-container:numberOfItemsAtPath::, container:itemAtPath:):
	Removed.
	* ETLayoutItemGroup+Mutation, ETInspector, ETBrowserLayout, 
	ETObjectBrowserLayout, ObjectManagerExample:
	Updated to use the new index path-based source protocol.

2009-01-27  Quentin Mathe <qmathe@club-internet.fr>

	* ETLayoutItemGroup:
	Moved ETContainer index-based source protocol to ETLayoutItemGroup, in that 
	way it is centered around the base item.
	(-numberOfItemsInItemGroup:, itemGroup:itemAtIndex:): Added.
	* ETContainer:
	(-numberOfItemsInContainer:, container:itemAtIndex:): Deprecated
	* ETLayoutItemGroup+Mutation, ETViewModelLayout, ObjectManagerExample, 
	  PhotoViewExample, PaneExample:
	Updated to use the new index-based source protocol.
	Also improved PhotoViewExample to take in account composite layout when the 
	positional constraints are altered.

2009-01-27  Quentin Mathe <qmathe@club-internet.fr>

	* ETLayoutItemGroup:
	(-source):
	(-setSource:):
	New methods moved out of ETContainer.
	* ETContainer:
	Removed _dataSource ivar (now declared as a property on ETLayoutItemGroup).
	(-source, -setSource:): Deprecated.

2009-01-26  Quentin Mathe <qmathe@club-internet.fr>

	* ETLayoutItem:
	Added kETRepresentedPathProperty. Moved property access macros to 
	ETCompatibility.h
	(-representedPathBase): Modified to return the property rather than nil 
	by default.
	* ETLayoutItemGroup:
	(-representedPathBase): Removed this overriden method version.
	(-setRepresentedPathBase:): New method based on the old 
	-[ETContainer representedPath].
	* ETContainer:
	Removed _path ivar (now declared as a property on ETLayoutItem).