@@ -1,6 +1,17 @@
 2009-01-27  Quentin Mathe <qmathe@club-internet.fr>
 
 	* ETLayoutItemGroup:
+	(-displayedItemPropertiesInItemGroup:): Added. Moved ETContainer equivalent 
+	declaration to ETLayoutItemGroup source protocol.
+	* ETContainer:
+	(-displayedItemPropertiesInContainer:): Removed.
+	* ETInspector, ETViewModelLayout, ETTableLayout, ETObjectBrowserLayout, 
+	ObjectManagerExample, PhotoViewExample:
+	Updated to use the new method.
+
+2009-01-27  Quentin Mathe <qmathe@club-internet.fr>
+
+	* ETLayoutItemGroup:
 	Moved ETContainer index path-based source protocol to ETLayoutItemGroup, in 
 	that way it is centered around the base item.
 	(-itemGroup:numberOfItemsAtPath:, itemGroup:itemAtPath:): Added.
